--- a/mlruns/0/11749cd73f1e4c538001e622ebc598b1/meta.yaml
+++ b/mlruns/0/11749cd73f1e4c538001e622ebc598b1/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/11749cd73f1e4
 end_time: 1571680505035
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 11749cd73f1e4c538001e622ebc598b1
 run_uuid: 11749cd73f1e4c538001e622ebc598b1
