--- a/mlruns/0/21b4fb5e16854aa79e62f0d9f7a42e22/meta.yaml
+++ b/mlruns/0/21b4fb5e16854aa79e62f0d9f7a42e22/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/21b4fb5e16854
 end_time: 1571661159113
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 21b4fb5e16854aa79e62f0d9f7a42e22
 run_uuid: 21b4fb5e16854aa79e62f0d9f7a42e22
