--- a/mlruns/0/3699ba905db5489cbf863340f12c7bb7/meta.yaml
+++ b/mlruns/0/3699ba905db5489cbf863340f12c7bb7/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/3699ba905db54
 end_time: 1571660681517
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 3699ba905db5489cbf863340f12c7bb7
 run_uuid: 3699ba905db5489cbf863340f12c7bb7
