--- a/mlruns/0/97aec6e162e145f99c6d4b3ff3b59ccc/meta.yaml
+++ b/mlruns/0/97aec6e162e145f99c6d4b3ff3b59ccc/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/97aec6e162e14
 end_time: 1571660166383
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 97aec6e162e145f99c6d4b3ff3b59ccc
 run_uuid: 97aec6e162e145f99c6d4b3ff3b59ccc
