--- a/mlruns/0/c8d57b8555a14d6aa4ff32c7035714a8/meta.yaml
+++ b/mlruns/0/c8d57b8555a14d6aa4ff32c7035714a8/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/c8d57b8555a14
 end_time: 1571680658084
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: c8d57b8555a14d6aa4ff32c7035714a8
 run_uuid: c8d57b8555a14d6aa4ff32c7035714a8
