--- a/mlruns/0/d9d4747109624bb0a0cf5f8b583c9b52/meta.yaml
+++ b/mlruns/0/d9d4747109624bb0a0cf5f8b583c9b52/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/d9d4747109624
 end_time: 1571680878731
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: d9d4747109624bb0a0cf5f8b583c9b52
 run_uuid: d9d4747109624bb0a0cf5f8b583c9b52
