--- a/mlruns/0/db97d810cd6143d29eb25c949f81e553/meta.yaml
+++ b/mlruns/0/db97d810cd6143d29eb25c949f81e553/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/db97d810cd614
 end_time: 1571660873881
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: db97d810cd6143d29eb25c949f81e553
 run_uuid: db97d810cd6143d29eb25c949f81e553
