--- a/mlruns/0/f4605c5f497f4d12b5050ce2f87637c3/meta.yaml
+++ b/mlruns/0/f4605c5f497f4d12b5050ce2f87637c3/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/f4605c5f497f4
 end_time: 1571661217910
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: f4605c5f497f4d12b5050ce2f87637c3
 run_uuid: f4605c5f497f4d12b5050ce2f87637c3
