--- a/mlruns/0/fe54526f6e9a43788939c6836e671cac/meta.yaml
+++ b/mlruns/0/fe54526f6e9a43788939c6836e671cac/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/fe54526f6e9a4
 end_time: 1571681048465
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: fe54526f6e9a43788939c6836e671cac
 run_uuid: fe54526f6e9a43788939c6836e671cac
