--- a/mlruns/0/355850bc5e564b0db9e3820ce1c553f7/meta.yaml
+++ b/mlruns/0/355850bc5e564b0db9e3820ce1c553f7/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/355850bc5e564
 end_time: 1571736262763
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 355850bc5e564b0db9e3820ce1c553f7
 run_uuid: 355850bc5e564b0db9e3820ce1c553f7
