--- a/mlruns/0/423867c2fbc84819a8fb521e50581e63/meta.yaml
+++ b/mlruns/0/423867c2fbc84819a8fb521e50581e63/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/423867c2fbc84
 end_time: 1571732308767
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: 423867c2fbc84819a8fb521e50581e63
 run_uuid: 423867c2fbc84819a8fb521e50581e63
