--- a/mlruns/0/c40649d073574d8abbd278fd7f627b4c/meta.yaml
+++ b/mlruns/0/c40649d073574d8abbd278fd7f627b4c/meta.yaml
@@ -2,7 +2,7 @@ artifact_uri: file:///Users/tanyaparmar/Desktop/test-repo/mlruns/0/c40649d073574
 end_time: 1571681175043
 entry_point_name: ''
 experiment_id: '0'
-lifecycle_stage: active
+lifecycle_stage: deleted
 name: ''
 run_id: c40649d073574d8abbd278fd7f627b4c
 run_uuid: c40649d073574d8abbd278fd7f627b4c
